<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="UserDetails"
            type="com.contus.carpooling.userregistration.model.UserRegistrationInfo" />

        <variable
            name="ViewController"
            type="com.contus.carpooling.userregistration.viewmodel.UserRegistrationController" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="User Registration"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="logo icon"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_logo" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/name"
                    android:textAllCaps="true"
                    android:textColor="@color/textViewColor"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/edit_text_line_border"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_user" />

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_your_name"
                        android:paddingLeft="5dp"
                        android:inputType="textCapWords|textCapSentences"
                        android:maxLines="1"
                        android:text="@={UserDetails.userName}"
                        android:textColorHint="@color/colorEditTextHint"
                        android:textSize="14sp" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/mobile"
                    android:textAllCaps="true"
                    android:textColor="@color/textViewColor"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/edit_text_line_border"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_mobile" />

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_your_mobile_number"
                        android:inputType="number"
                        android:paddingLeft="5dp"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:text="@={UserDetails.mobileNumber}"
                        android:textColorHint="@color/colorEditTextHint"
                        android:textSize="14sp" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/email"
                    android:textAllCaps="true"
                    android:textColor="@color/textViewColor"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/edit_text_line_border"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_mail" />

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_your_email_id"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="5dp"
                        android:maxLines="1"
                        android:text="@={UserDetails.emailID}"
                        android:textColorHint="@color/colorEditTextHint"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_preference"
                        android:textAllCaps="true"
                        android:textColor="@color/textViewColor"
                        android:textSize="12sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick='@{ViewController.radioBtnOnClick(UserDetails,"Male")}'
                            android:text="@string/male"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="14sp"
                            android:theme="@style/RadioButton" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_weight="1"
                            android:onClick='@{ViewController.radioBtnOnClick(UserDetails,"Female")}'
                            android:text="@string/female"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="14sp"
                            android:theme="@style/RadioButton" />
                    </RadioGroup>

                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/from"
                    android:textAllCaps="true"
                    android:textColor="@color/textViewColor"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/edit_text_line_border"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_location" />

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:hint="@string/from_location"
                        android:inputType="text"
                        android:onClick="@{ViewController.getLocationOnClick(2)}"
                        android:paddingLeft="5dp"
                        android:maxLines="1"
                        android:text="@={UserDetails.fromLocation}"
                        android:textColorHint="@color/colorEditTextHint"
                        android:textSize="14sp" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/to"
                    android:textAllCaps="true"
                    android:textColor="@color/textViewColor"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/edit_text_line_border"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_location" />

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:hint="@string/to_location"
                        android:inputType="text"
                        android:onClick="@{ViewController.getLocationOnClick(3)}"
                        android:paddingLeft="5dp"
                        android:maxLines="1"
                        android:text="@={UserDetails.toLocation}"
                        android:textColorHint="@color/colorEditTextHint"
                        android:textSize="14sp" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textColor="@color/textViewColor"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/edit_text_line_border"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_password" />

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:paddingLeft="5dp"
                        android:maxLines="1"
                        android:text="@={UserDetails.password}"
                        android:textColorHint="@color/colorEditTextHint"
                        android:textSize="14sp" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_rounded_corner_border"
                    android:onClick="@{ViewController.btnRegistrationOnClick(UserDetails)}"
                    android:text="@string/next"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <LinearLayout
                    android:id="@+id/ll_sign_up_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_login"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dont_have_an_account"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/btn_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{ViewController.btnSignInOnClick()}"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorHighLightBlue"
                        android:textSize="16sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="2dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_footer" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>